--- a/html/tecnico/opconcluida.html
+++ b/html/tecnico/opconcluida.html
@@ -1,26 +1,17 @@
 <html>
-	<head>
-		<h1><center>Operaçao efetuada com sucesso</center></h1>
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
- 
-	</head>
 	<body>
-	<div class="section-container">
-	<div class="container">
-    <center>
-	<div class="form-group row">
-	     <div class="col-lg-5"> </div>
-	     <div class="col-lg-2">
-        	<button type="button" class="btn-success btn-lg" id="hometec">
-          		<span class="glyphicon glyphicon-home"></span> Menu Inicial
-       		</button>
-   		 </div>
-    </div>
-
-	</center>
-	</div>
-	</div>
+		<center>
+		<h1>Operação efetuada com sucesso!</h1>
+			<div class="container">
+				<div class="form-group row">
+			     <div class="col-lg">
+		        	<button type="button" class="btn-success btn-lg" id="hometec">
+		          		<span class="glyphicon glyphicon-home"></span> Menu Inicial
+		       		</button>
+		   		 </div>
+				</div>
+			</div>
+		</center>
 	</body>
 	<script src="js/tecnico/adicionar.js">
 	</script>
