--- a/html/tecnico/abrir.html
+++ b/html/tecnico/abrir.html
@@ -4,12 +4,12 @@
 	    <div class="container">
 	          <center>
 	        		<div class="form-group row">
-	        			<div class="col-lg-6">
+	        			<div class="col-lg">
 	        				<label><font size="10">Selecione a sala:</font></h4>
 	        			</div>
 	        		</div>
 	        		<div class="form-group row">
-	        			<div class="col-lg-6">
+	        			<div class="col-lg">
 	        				<input style="height:80px;width:380px" type="text" class="form-control">
 	        			</div>
 	        		</div>
