--- a/html/prof.html
+++ b/html/prof.html
@@ -7,7 +7,7 @@
 
 				<div class="row">
 					<div class="col-md-12">
-							<Button type="button" class="btn btn-success btn-lg" id="duvida">
+							<Button type="button" class="btn btn-primary btn-lg" id="duvida">
 									Agendamento de horário de dúvidas
 							</Button>
 					</div>
@@ -15,7 +15,7 @@
 				<br>
 				<div class="row">
 					<div class="col-md-12">
-						<Button type="button" class="btn btn-success btn-lg" id="aula">
+						<Button type="button" class="btn btn-primary btn-lg" id="aula">
 								Agendamento de aula de reposição/extraordinária
 						</Button>
 					</div>
@@ -23,7 +23,7 @@
 				<br>
 				<div class="row">
 					<div class="col-md-12">
-						<Button type="button" class="btn btn-success btn-lg" id="visualizar">
+						<Button type="button" class="btn btn-primary btn-lg" id="visualizar">
 								Consultar reservas
 						</Button>
 					</div>
