--- a/html/tecnico.html
+++ b/html/tecnico.html
@@ -6,23 +6,23 @@
 		<center>
 			
 			<div class="form-group row">
-				<Button type="button" class="btn btn-basic btn-lg" id="fechar">Fechar sala de estudo</Button>
+				<Button type="button" class="btn btn-primary btn-lg" id="fechar">Fechar sala de estudo</Button>
 			</div>
 
 			<div class="form-group row">
-				<Button type="button" class="btn btn-basic btn-lg" id="abrir">Abrir sala de estudo</Button>
+				<Button type="button" class="btn btn-primary btn-lg" id="abrir">Abrir sala de estudo</Button>
 			</div>
 
 			<div class="form-group row">
-				<Button type="button" class="btn btn-basic btn-lg" id="adicionar">Adicionar sala de estudo</Button>
+				<Button type="button" class="btn btn-primary btn-lg" id="adicionar">Adicionar sala de estudo</Button>
 			</div>
 
 			<div class="form-group row">
-				<Button type="button" class="btn btn-basic btn-lg" id="alterar">Alterar sala de estudo</Button>
+				<Button type="button" class="btn btn-primary btn-lg" id="alterar">Alterar sala de estudo</Button>
 			</div>
 			
 			<div class="form-group row">
-				<Button type="button" class="btn btn-basic btn-lg" id="remover">Remover sala de estudo</Button>
+				<Button type="button" class="btn btn-primary btn-lg" id="remover">Remover sala de estudo</Button>
 			</div>
 
 
