--- a/html/util/comfirma_reserva.html
+++ b/html/util/comfirma_reserva.html
@@ -1,11 +1,17 @@
 <html>
 	<body>
 		<center>
-
-			<h1> Sucesso </h1>
-			<div id="sucesso">
-
-			</div>
+				<h1>Operação efetuada com sucesso!</h1>
+					<div class="container">
+						<div class="form-group row">
+					     <div class="col-lg">
+				        	<button type="button" class="btn-success btn-lg" onclick='goToHome("prof");'>
+				          		Voltar para o menu inicial
+				       		</button>
+				   		 </div>
+						</div>
+					</div>
+				</center>
 		</center>
 	</body>
 	<script src="js/util/confirma_reserva.js"></script>
